Changed information to what is actually supposed to be on the slides.

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -7,7 +7,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Fonts/soleto/stylesheet.css"/>
 
     <style>
         .c
@@ -37,10 +36,6 @@
             font-size: 30px;
             color: white;
         }
-        h2
-        {
-            font-size: 40px;
-        }
 
         .profile-image
         {
@@ -61,11 +56,16 @@
             width: 10px;
             height: 10px;
             border-radius: 100%;
-            background-color: #4c0563;
+            background-color: #8f1170;
         }
         .carousel-indicators 
         {
-            bottom: -350px;
+            bottom: -450px;
+        }
+
+        .contact
+        {
+            font-size: 20px;
         }
 
     </style>
@@ -76,7 +76,7 @@
 <body>
     <div class="container-fluid">
         <header class="text-center">
-            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="600">
+            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="500">
             </object>
         </header>
         <div id="carouselExampleIndicators" class="carousel slide person-info" data-ride="carousel" data-pause="false" style="height: 10rem">
@@ -90,62 +90,82 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div>
-                        <h1 class="name">Robin Kastberg</h1>
+                        <h1 class="name">Susanne Stjernberg</h1>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>
-                                Jag är här för att klaga på din kod och allt du gör.<br />
-                                Om du ger mig kaffe så kanske jag klagar lite mindre.
+                                Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
                             <img class="profile-image" src="Img/Profile/susanne300.jpg" />
                         </div>
                     </div>
-                    <p>
-                        TEL: 000774433<br />
-                        Mail: robin.kastberg@ntig.se
+                    <p class="contact">
+                        E-post: susanne.stjernberg@ntig.se<br />
+                        Telefon: 000774433<br />
+                        Arbetar: 8.30-13.00
                     </p>
                 </div>
                 <div class="carousel-item">
                     <div>
-                        <h1 class="name">Tobey Maguire</h1>
+                        <h1 class="name">Megan Sundström</h1>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>
-                                You get your rent when you fix this damn door!!!<br />
-                                Gonna cry?<br />
-
+                                Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
-                            <img class="profile-image" src="Img/tenor.gif" />
+                            <img class="profile-image" src="Img/Profile/megan300.jpg" />
                         </div>
                     </div>
-                    <p>
-                        TEL: <br />
-                        Mail:
+                    <p class="contact">
+                        E-post: megan.sundstrom@ntig.se<br />
+                        Telefon: 018-18 22 93, 076-830 32 48<br />
+                        Arbetar: ojämna måndagar, tisdagar, onsdagar, fredagar
                     </p>
                 </div>
                 <div class="carousel-item">
                     <div>
-                        <h1 class="name">Tobey Maguire</h1>
+                        <h1 class="name">Maud Enbom</h1>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>
-                                Pizza time!
+                                Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
-                            <img class="profile-image" src="Img/giphy.gif" />
+                            <img class="profile-image" src="Img/Profile/Maud300.jpg" />
                         </div>
                     </div>
-                    <p>
-                        TEL: <br />
-                        Mail:
+                    <p class="contact">
+                        E-post: sarah.hagberg@ntig.se<br />
+                        Telefon: 018-18 22 77<br />
+                        Arbetar: Alla dagar
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <div>
+                        <h1 class="name">Henrik Jonsson</h1>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>
+                                Mer info kommer senare.
+                            </p>
+                        </div>
+                        <div class="col text-center">
+                            <img class="profile-image" src="Img/Profile/henrik300.jpg" />
+                        </div>
+                    </div>
+                    <p class="contact">
+                        E-post: henrik.jonsson@ntig.se<br />
+                        Telefon: 018-18 22 71<br />
+                        Arbetar: Alla dagar
                     </p>
                 </div>
                 <div class="carousel-item">
@@ -155,15 +175,18 @@
                     <div class="row">
                         <div class="col">
                             <p>
-                                Hej du..<br />
-                                Ha ha!<br />
-                                FUS RO DAH!!!!
+                                Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
                             <img class="profile-image" src="Img/Profile/sarah300.2.jpg" />
                         </div>
                     </div>
+                    <p class="contact">
+                        E-post: sarah.hagberg@ntig.se<br />
+                        Telefon: 018-18 22 77<br />
+                        Arbetar: Alla dagar
+                    </p>
                 </div>
             </div>
         </div>
@@ -173,14 +196,16 @@
                 <div class="carousel slide c" data-ride="carousel" data-pause="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <h1>Problem med att sova?</h1>
-                            Lösning här.
+                            <h1>Mer info senare</h1>
+                            <p>
+                                ...
+                            </p>
                         </div>
                         <div class="carousel-item">
-                            <h1>I can smell you.</h1>
-                        </div>
-                        <div class="carousel-item">
-                            <h1>Oj da.</h1>
+                            <h1>Mer info senare</h1>
+                            <p>
+                                ...
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -189,205 +214,16 @@
                 <div class="carousel slide c" data-ride="carousel" data-pause="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <h2>Obi-Wan Kenobi:</h2>
-                            Hello There!
+                            <h2>Mer info senare</h2>
+                            <p>
+                                ...
+                            </p>
                         </div>
                         <div class="carousel-item">
-                            <h2>General Grevious:</h2>
-                            General Kenobi!<br />
-                            You are a bold one.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan Kenobi:</h2>
-                            Your move!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>General Grevious:</h2>
-                            You fool, I've been trained in your jedi arts by Count Doku.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            You are beaten. It is useless to resist.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            Don't let yourself be destroyed as Obi-Wan did.
-                        </div>
-                        <div class="carousel-item">
-                            <h2></h2>
-                            [Vader severs Luke's right hand with his lightsaber..]
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Luke</h2>
-                            Aaaaaaaaaaaaaaaa!!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            There is no escape. Don't make me destroy you.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            Luke, you do not yet realize your importance.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            You've only begun to discover your power.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            Join me, and I will complete your training.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            With our combined strength, we can end this destructive conflict
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            and bring order to the galaxy!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Luke:</h2>
-                            I'll NEVER join you!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            If only you knew the power of the dark side.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            Obi-Wan never told you what happened to your father.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Luke:</h2>
-                            He told me enough. He told me you killed him.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            No. I am your father.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Luke:</h2>
-                            Luke: [Shocked] No. No. That's not true! That's impossible!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Vader:</h2>
-                            Search your feelings, you know it to be true.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            I have failed you, Anakin. I have failed you.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Anakin:</h2>
-                            I should have known the Jedi were plotting to take over.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            Anakin, Chancellor Palpatine is evil!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Anakin:</h2>
-                            From my point of view, the Jedi are evil!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            Well, then you are lost!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Anakin</h2>
-                            This is the end for you, My Master.
-                        </div>
-                        <div class="carousel-item">
-                            <h2></h2>
-                            [ANAKIN jumps and flips onto OBI- WAN's platform.]
-                        </div>
-                        <div class="carousel-item">
-                            <h2></h2>
-                            [OBI-WAN jumps to the hill]
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            It's over, Anakin. I have the high ground.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Anakin:</h2>
-                            You underestimate my power!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            Don't try it.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Luke:</h2>
-                            [ANAKIN jumps, and OBI-WAN rekt his young apprentice.]
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            You were the chosen one!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            It was said that you would, destroy the Sith, not join them!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            Bring balance to the Force, not leave it in Darkness!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Anakin:</h2>
-                            I hate you!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Obi-Wan:</h2>
-                            You were my brother, Anakin. I loved you.
-                        </div>
-                        <div class="carousel-item">
-                            <h2></h2>
-                            [ANAKIN bursts into flames and starts SCREAMING.]
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Palpatine:</h2>
-                            Master Windu. I take it General Grievous has been destroyed then.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Palpatine:</h2>
-                            I must say, you're here sooner than expected.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Mace Windu:</h2>
-                            In the name of the Galactic Senate of the Republic
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Mace Windu:</h2>
-                            you are under arrest, Chancellor.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Palpatine:</h2>
-                            Are you threatening me, Master Jedi?
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Mace:</h2>
-                            The Senate will decide your fate.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Palpatine:</h2>
-                            (burst of anger) I am the Senate!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Mace:</h2>
-                            Not yet!
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Palpatine:</h2>
-                            It's treason, then.
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Palpatine:</h2>
-                            *autistic screeching 760 degrees spin-flip*
-                        </div>
-                        <div class="carousel-item">
-                            <h2>Anakin:</h2>
-                            I don't like sand.
+                            <h2>Mer info senare</h2>
+                            <p>
+                                ...
+                            </p>
                         </div>
                     </div>
                 </div>
