corrected contact info

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -105,7 +105,7 @@
                     </div>
                     <p class="contact">
                         E-post: susanne.stjernberg@ntig.se<br />
-                        Telefon: 000774433<br />
+                        Telefon: 018-18 22 79<br />
                         Arbetar: 8.30-13.00
                     </p>
                 </div>
@@ -144,9 +144,9 @@
                         </div>
                     </div>
                     <p class="contact">
-                        E-post: sarah.hagberg@ntig.se<br />
-                        Telefon: 018-18 22 77<br />
-                        Arbetar: Alla dagar
+                        E-post: maud.enblom@ntig.se<br />
+                        Telefon: 018-18 22 73, 076-820 11 72<br />
+                        Arbetar: måndagar, onsdagar, jämna fredagar
                     </p>
                 </div>
                 <div class="carousel-item">
