correted more information

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -126,7 +126,7 @@
                     <p class="contact">
                         E-post: megan.sundstrom@ntig.se<br />
                         Telefon: 018-18 22 93, 076-830 32 48<br />
-                        Arbetar: ojämna måndagar, tisdagar, onsdagar, fredagar
+                        Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar
                     </p>
                 </div>
                 <div class="carousel-item">
@@ -144,9 +144,9 @@
                         </div>
                     </div>
                     <p class="contact">
-                        E-post: maud.enblom@ntig.se<br />
+                        E-post: maud.enbom@ntig.se<br />
                         Telefon: 018-18 22 73, 076-820 11 72<br />
-                        Arbetar: måndagar, onsdagar, jämna fredagar
+                        Arbetar: Måndagar, onsdagar, jämna fredagar
                     </p>
                 </div>
                 <div class="carousel-item">
