changed speed on slides

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -79,7 +79,7 @@
             <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="500">
             </object>
         </header>
-        <div id="carouselExampleIndicators" class="carousel slide person-info" data-ride="carousel" data-pause="false" style="height: 10rem">
+        <div id="carouselExampleIndicators" class="carousel slide person-info" data-ride="carousel" data-pause="false" data-interval="10000" style="height: 10rem">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -194,7 +194,7 @@
 
         <div class="row fixed-bottom" id="box">
             <div class="col">
-                <div class="carousel slide c" data-ride="carousel" data-pause="false">
+                <div class="carousel slide c" data-ride="carousel" data-pause="false" data-interval="10000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <h2>Mer info senare</h2>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="carousel slide c" data-ride="carousel" data-pause="false">
+                <div class="carousel slide c" data-ride="carousel" data-pause="false" data-interval="10000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <h2>Mer info senare</h2>
