--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -9,6 +9,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <style>
+
+        @font-face 
+        {
+            font-family: Soleto;
+            src: url('Fonts/soleto/soleto-light-webfont.woff2') format('woff2'),
+            url('Fonts/soleto/soleto-light-webfont.woff') format('woff');
+            font-weight: 300;
+            font-style: normal;
+        }
+
         .c
         {
           
@@ -46,9 +56,8 @@
         .name
         {
             font-size: 40px;
-            padding-bottom: 10px;
-            padding-left: 10px;
-            background-image: linear-gradient(to right, #ab058b,#4e0568, transparent);                
+            padding: 10px;
+            background-image: linear-gradient(to right, #ab058b,#4e0568, transparent);    
         }
 
         .carousel-indicators li 
@@ -90,8 +99,13 @@
 
             <div class="carousel-inner" >
                 <div class="carousel-item active">
-                    <div>
-                        <h1 class="name">Susanne Stjernberg</h1>
+                    <div class="name row justify-content-between">
+                        <div class="col-7">
+                            <h2>Susanne Stjernberg</h2>
+                        </div>
+                        <div class="col">
+                            <h2>SYV</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -110,8 +124,13 @@
                     </p>
                 </div>
                 <div class="carousel-item">
-                    <div>
-                        <h1 class="name">Megan Sundström</h1>
+                    <div class="name row">
+                        <div class="col-7">
+                            <h2>Megan Sundström</h2>
+                        </div>
+                        <div class="col">
+                            <h2>Kurator</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -130,8 +149,13 @@
                     </p>
                 </div>
                 <div class="carousel-item">
-                    <div>
-                        <h1 class="name">Maud Enbom</h1>
+                    <div class="name row align-items-end justify-content-between">
+                        <div class="col-7">
+                            <h2>Maud Enblom</h2>
+                        </div>
+                        <div class="col">
+                            <h2>Skolsköterska</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -150,8 +174,13 @@
                     </p>
                 </div>
                 <div class="carousel-item">
-                    <div>
-                        <h1 class="name">Henrik Jonsson</h1>
+                    <div class="name row align-items-end justify-content-between">
+                        <div class="col-7">
+                            <h2>Henrik Jonsson</h2>
+                        </div>
+                        <div class="col">
+                            <h2>Specialpedagog</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -170,8 +199,13 @@
                     </p>
                 </div>
                 <div class="carousel-item">
-                    <div>
-                        <h1 class="name">Sarah Hagberg</h1>
+                    <div class="name row align-items-end justify-content-between">
+                        <div class="col-7">
+                            <h2>Sarah Hagberg</h2>
+                        </div>
+                        <div class="col">
+                            <h2>Specialpedagog</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
