changed orientation from portrait to landscape

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -43,6 +43,7 @@
         {
             background-color: #1a0f27;
             margin: 25px;
+            margin-top: 0px;
             font-size: 30px;
             color: white;
         }
@@ -56,7 +57,6 @@
         .name
         {
             font-size: 40px;
-            padding: 10px;
             background-image: linear-gradient(to right, #ab058b,#4e0568, transparent);    
         }
 
@@ -69,7 +69,7 @@
         }
         .carousel-indicators 
         {
-            bottom: -380px;
+            bottom: -370px;
         }
 
         .contact
@@ -85,7 +85,7 @@
 <body>
     <div class="container-fluid">
         <header class="text-center">
-            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="500">
+            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
             </object>
         </header>
         <div id="carouselExampleIndicators" class="carousel slide person-info" data-ride="carousel" data-pause="false" data-interval="10000" style="height: 10rem">
@@ -101,19 +101,19 @@
                 <div class="carousel-item active">
                     <div class="name row justify-content-between">
                         <div class="col-7">
-                            <h2>Susanne Stjernberg</h2>
+                            <h2 style="padding-left: 10px;">Susanne Stjernberg</h2>
                         </div>
-                        <div class="col">
+                        <div class="col-4 pl-0">
                             <h2>SYV</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-7">
                             <p>
                                 Mer info kommer senare.
                             </p>
                         </div>
-                        <div class="col text-center">
+                        <div class="col-4 text-center">
                             <img class="profile-image" src="Img/Profile/susanne300.jpg" />
                         </div>
                     </div>
@@ -124,21 +124,21 @@
                     </p>
                 </div>
                 <div class="carousel-item">
-                    <div class="name row">
+                    <div class="name row justify-content-between">
                         <div class="col-7">
-                            <h2>Megan Sundström</h2>
+                            <h2 style="padding-left: 10px;">Megan Sundström</h2>
                         </div>
-                        <div class="col">
+                        <div class="col-4 pl-0">
                             <h2>Kurator</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-7">
                             <p>
                                 Mer info kommer senare.
                             </p>
                         </div>
-                        <div class="col text-center">
+                        <div class="col-4 text-center">
                             <img class="profile-image" src="Img/Profile/megan300.jpg" />
                         </div>
                     </div>
@@ -151,9 +151,9 @@
                 <div class="carousel-item">
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
-                            <h2>Maud Enblom</h2>
+                            <h2 style="padding-left: 10px;">Maud Enblom</h2>
                         </div>
-                        <div class="col">
+                        <div class="col-4 pl-0">
                             <h2>Skolsköterska</h2>
                         </div>
                     </div>
@@ -176,9 +176,9 @@
                 <div class="carousel-item">
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
-                            <h2>Henrik Jonsson</h2>
+                            <h2 style="padding-left: 10px;">Henrik Jonsson</h2>
                         </div>
-                        <div class="col">
+                        <div class="col-4 pl-0">
                             <h2>Specialpedagog</h2>
                         </div>
                     </div>
@@ -201,9 +201,9 @@
                 <div class="carousel-item">
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
-                            <h2>Sarah Hagberg</h2>
+                            <h2 style="padding-left: 10px;">Sarah Hagberg</h2>
                         </div>
-                        <div class="col">
+                        <div class="col-4 pl-0">
                             <h2>Specialpedagog</h2>
                         </div>
                     </div>
