--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -97,129 +97,178 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             </ol>
 
-            <div class="carousel-inner" >
+            <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="name row justify-content-between">
                         <div class="col-7">
+                            <!-- Name -->
                             <h2 style="padding-left: 10px;">Susanne Stjernberg</h2>
                         </div>
                         <div class="col-4 pl-0">
-                            <h2>SYV</h2>
+                            <!-- Role -->
+                                <h2>SYV</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-7">
                             <p>
+                                <!-- Info -->
                                 Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col-4 text-center">
+                            <!-- Image -->
                             <img class="profile-image" src="Img/Profile/susanne300.jpg" />
                         </div>
                     </div>
                     <p class="contact">
+                        <!-- Email -->
                         E-post: susanne.stjernberg@ntig.se<br />
+
+                        <!-- Phone -->
                         Telefon: 018-18 22 79<br />
+
+                        <!-- Working days and hours -->
                         Arbetar: 8.30-13.00
                     </p>
                 </div>
+
                 <div class="carousel-item">
                     <div class="name row justify-content-between">
                         <div class="col-7">
+                            <!-- Name -->
                             <h2 style="padding-left: 10px;">Megan Sundström</h2>
                         </div>
                         <div class="col-4 pl-0">
+                            <!-- Role -->
                             <h2>Kurator</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-7">
                             <p>
+                                <!-- Info -->
                                 Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col-4 text-center">
+                            <!-- Image -->
                             <img class="profile-image" src="Img/Profile/megan300.jpg" />
                         </div>
                     </div>
                     <p class="contact">
+                        <!-- Email -->
                         E-post: megan.sundstrom@ntig.se<br />
+
+                        <!-- Phone -->
                         Telefon: 018-18 22 93, 076-830 32 48<br />
+
+                        <!-- Working days and hours -->
                         Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar
                     </p>
                 </div>
+
                 <div class="carousel-item">
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
+                            <!-- Name -->
                             <h2 style="padding-left: 10px;">Maud Enblom</h2>
                         </div>
                         <div class="col-4 pl-0">
+                            <!-- Role -->
                             <h2>Skolsköterska</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>
+                                <!-- Info -->
                                 Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
+                            <!-- Image -->
                             <img class="profile-image" src="Img/Profile/Maud300.jpg" />
                         </div>
                     </div>
                     <p class="contact">
+                        <!-- Email -->
                         E-post: maud.enbom@ntig.se<br />
+
+                        <!-- Phone -->
                         Telefon: 018-18 22 73, 076-820 11 72<br />
+
+                        <!-- Working days and hours -->
                         Arbetar: Måndagar, onsdagar, jämna fredagar
                     </p>
                 </div>
+
                 <div class="carousel-item">
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
+                            <!-- Name -->
                             <h2 style="padding-left: 10px;">Henrik Jonsson</h2>
                         </div>
                         <div class="col-4 pl-0">
+                            <!-- Role -->
                             <h2>Specialpedagog</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>
+                                <!-- Info -->
                                 Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
+                            <!-- Image -->
                             <img class="profile-image" src="Img/Profile/henrik300.jpg" />
                         </div>
                     </div>
                     <p class="contact">
+                        <!-- Email -->
                         E-post: henrik.jonsson@ntig.se<br />
+
+                        <!-- Phone -->
                         Telefon: 018-18 22 71<br />
+
+                        <!-- Working days and hours -->
                         Arbetar: Alla dagar
                     </p>
                 </div>
+
                 <div class="carousel-item">
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
+                            <!-- Name -->
                             <h2 style="padding-left: 10px;">Sarah Hagberg</h2>
                         </div>
                         <div class="col-4 pl-0">
+                            <!-- Role -->
                             <h2>Specialpedagog</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>
+                                <!-- Info -->
                                 Mer info kommer senare.
                             </p>
                         </div>
                         <div class="col text-center">
+                            <!-- Image -->
                             <img class="profile-image" src="Img/Profile/sarah300.2.jpg" />
                         </div>
                     </div>
                     <p class="contact">
+                        <!-- Email -->
                         E-post: sarah.hagberg@ntig.se<br />
+
+                        <!-- Phone -->
                         Telefon: 018-18 22 77<br />
+
+                        <!-- Working days and hours -->
                         Arbetar: Alla dagar
                     </p>
                 </div>
