uppdaterade allas texter och fixade stavfel på maud enbom

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -113,7 +113,8 @@
                         <div class="col-7">
                             <p>
                                 <!-- Info -->
-                                Mer info kommer senare.
+                                Susanne arbetar som studie- och yrkesvägledare. SYV vägleder dig inom de utbildningar som finns att välja mellan. Susanne hjälper dig med dina nuvarande studier. Hon kan också hjälpa dig med att få aktuell information kring vidare studier, yrken och arbetsmarknad.
+
                             </p>
                         </div>
                         <div class="col-4 text-center">
@@ -148,7 +149,7 @@
                         <div class="col-7">
                             <p>
                                 <!-- Info -->
-                                Mer info kommer senare.
+                                Megan arbetar som skolkurator. En skolkurator arbetar med elevernas psykosociala hälsa i frågor som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan. Megan arbetar bland annat med samtalsstöd till elever och ger handledning och konsultation till övrig skolpersonal och vårdnadshavare. Kuratorer har tystnadsplikt.
                             </p>
                         </div>
                         <div class="col-4 text-center">
@@ -172,7 +173,7 @@
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
-                            <h2 style="padding-left: 10px;">Maud Enblom</h2>
+                            <h2 style="padding-left: 10px;">Maud Enbom</h2>
                         </div>
                         <div class="col-4 pl-0">
                             <!-- Role -->
@@ -183,7 +184,9 @@
                         <div class="col">
                             <p>
                                 <!-- Info -->
-                                Mer info kommer senare.
+                                Maud arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk1.
+                                Som gymnasieelev förväntas man, med stöd av vårdnadshavare, att ta eget ansvar för mediciner som man eventuellt behöver ta under skoldagen. Skolsköterskor har tystnadsplikt.
+
                             </p>
                         </div>
                         <div class="col text-center">
@@ -218,7 +221,7 @@
                         <div class="col">
                             <p>
                                 <!-- Info -->
-                                Mer info kommer senare.
+                                Henrik arbetar som rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier och har svårt att nå målen kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
                         </div>
                         <div class="col text-center">
@@ -253,7 +256,7 @@
                         <div class="col">
                             <p>
                                 <!-- Info -->
-                                Mer info kommer senare.
+                                Sarah arbetar som biträdande rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
                         </div>
                         <div class="col text-center">
