ändrade 8:30 - 13:00 till förmiddagar för att följa hur vi skrivit tider på andra ställen

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -130,7 +130,7 @@
                         Telefon: 018-18 22 79<br />
 
                         <!-- Working days and hours -->
-                        Arbetar: 8.30-13.00
+                        Arbetar: Förmiddagar
                     </p>
                 </div>
 
