gjort så att sidan refreshar varje timme

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="3600">
     <title></title>
     <link rel="stylesheet" href="Resources/bootstrap-4.3.1-dist/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <script src="Resources/jquery-3.3.1.slim.min.js"></script>
@@ -10,37 +11,30 @@
 
     <style>
 
-        @font-face 
-        {
+        @font-face {
             font-family: Soleto;
-            src: url('Fonts/soleto/soleto-light-webfont.woff2') format('woff2'),
-            url('Fonts/soleto/soleto-light-webfont.woff') format('woff');
+            src: url('Fonts/soleto/soleto-light-webfont.woff2') format('woff2'), url('Fonts/soleto/soleto-light-webfont.woff') format('woff');
             font-weight: 300;
             font-style: normal;
         }
 
-        .c
-        {
-          
+        .c {
             background-image: linear-gradient(to top, #ab058b,#4e0568, transparent);
             color: white;
             height: 20rem;
         }
 
-        .c .carousel-item
-        {
-            padding:12px;
-            padding-top: 40px;
-        }
+            .c .carousel-item {
+                padding: 12px;
+                padding-top: 40px;
+            }
 
-        #box
-        {
+        #box {
             margin: 25px;
             margin-bottom: 50px;
         }
 
-        body
-        {
+        body {
             background-color: #1a0f27;
             margin: 25px;
             margin-top: 0px;
@@ -48,35 +42,30 @@
             color: white;
         }
 
-        .profile-image
-        {
+        .profile-image {
             height: 300px;
             max-width: 100%;
         }
 
-        .name
-        {
+        .name {
             font-size: 40px;
-            background-image: linear-gradient(to right, #ab058b,#4e0568, transparent);    
+            background-image: linear-gradient(to right, #ab058b,#4e0568, transparent);
         }
 
-        .carousel-indicators li 
-        {
+        .carousel-indicators li {
             width: 10px;
             height: 10px;
             border-radius: 100%;
             background-color: #8f1170;
         }
-        .carousel-indicators 
-        {
+
+        .carousel-indicators {
             bottom: -370px;
         }
 
-        .contact
-        {
+        .contact {
             font-size: 20px;
         }
-
     </style>
 
 </head>
